fix: style: fix the mobile hero section
The (black) heading container was overflowing the screen on mobile devices.

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
   }
 
   .heading {
-    @apply uppercase bg-black px-6 py-3 text-white font-extrabold sm:text-[54px] sm:leading-[64px] text-[36px] leading-[46px] text-center my-5 mx-auto max-w-5xl;
+    @apply uppercase bg-black p-6 text-white font-extrabold text-2xl sm:text-5xl leading-[46px] sm:leading-[64px] text-center my-5 mx-auto max-w-full break-words;
   }
 
   .sub-heading {
